Fixed not displaying code input on safari mobile [#173468301]

--- a/src/components/CodeInput/CodeInput.module.scss
+++ b/src/components/CodeInput/CodeInput.module.scss
@@ -3,16 +3,13 @@
 .container {
   input {
     border-radius: 10px;
-    width: 42px;
-    height: 52px;
-    font-size: 40px;
+    font-size: 28px;
     text-align: center;
-    border: 0;
     margin-right: 0.5rem;
+    border: 3px solid transparent;
+    line-height: 1;
 
     @include media-breakpoint-up(md) {
-      width: 62px;
-      height: 77px;
       font-size: 50px;
     }
 
